--- a/views/login.jade
+++ b/views/login.jade
@@ -2,17 +2,14 @@ extends layout
 
 block content
 
-  
   .container
-    h1 Login Page
-    p.lead Say something worthwhile here.
+    h1 Login
     br
-    form(role='form', action="/login",method="post", style='max-width: 300px;')
+    form(role='form', action="/login", method="POST", style="max-width: 300px;")
       .form-group
-          input.form-control(type='text', name="username", placeholder='Enter Username')
+        input.form-control(type="text", name="email", placeholder="Email")
       .form-group
-        input.form-control(type='password', name="password", placeholder='Password')
-      button.btn.btn-default(type='submit') Submit
-      &nbsp;
-      a(href='/')
+        input.form-control(type="password", name="password", placeholder="Password")
+      button.btn.btn-default(type="submit") Submit
+      a(href="/")
         button.btn.btn-primary(type="button") Cancel
