--- a/views/signup.jade
+++ b/views/signup.jade
@@ -7,9 +7,15 @@ block content
     br
     form(role='form', action="/signup",method="post", style='max-width: 300px;')
       .form-group
+          input.form-control(type='text', name="username", placeholder='Enter Username')
+      .form-group
           input.form-control(type='email', name="email", placeholder='Enter Email')
       .form-group
         input.form-control(type='password', name="password", placeholder='Password')
+      .form-group
+          input.form-control(type='text', name="firstName", placeholder='Enter First Name')
+      .form-group
+          input.form-control(type='text', name="lastName", placeholder='Enter Last Name')
       button.btn.btn-default(type='submit') Submit
       &nbsp;
       a(href='/')
