facebook login almost
not sure if working properly though

--- a/views/index.jade
+++ b/views/index.jade
@@ -22,4 +22,8 @@ block content
 					a(href="/settings") Settings
 				div#option3
 					a(href="/forum") Forum
-
+			div.fb
+				p facebook id: <%=user.oathID %>
+				p facebook id: <%=user.email %>
+				p facebook id: <%=user.firstName %>
+				p facebook id: <%=user.lastName %>
