--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,8 @@ html
     link(href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css', rel='stylesheet', media='screen')
     link(rel='stylesheet', href='/css/styles.css')
     link(rel='stylesheet', href='/css/formstyle.css')
+    script
+      
   body
     if (error && error.length > 0)
       br
