attempting to send email
need to get postmark sender signature verified
still need reset

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,7 +23,8 @@ block content
 				div#option3
 					a(href="/forum") Forum
 			.fb
-				p facebook id: #{user.id}
-				p facebook email: #{user.email}
-				p facebook username: #{user.username}
-				p facebook first name: #{user.firstName}
+				p id: #{user.id}
+				p oauth ID #{user.oauthID}
+				p email: #{user.email}
+				p username: #{user.username}
+				p first name: #{user.firstName}
