--- a/views/login.jade
+++ b/views/login.jade
@@ -13,3 +13,5 @@ block content
       button.btn.btn-default(type="submit") Submit
       a(href="/")
         button.btn.btn-primary(type="button") Cancel
+      a(href="forgot")
+        button.btn.btn-primary(type='button') I forgot my password
