--- a/views/signup.jade
+++ b/views/signup.jade
@@ -13,6 +13,8 @@ block content
       .form-group
         input.form-control(type='password', name="password", placeholder='Password')
       .form-group
+        input.form-control(type='password', name='confirmPassword', placeholder='Confirm Password')
+      .form-group
           input.form-control(type='text', name="firstName", placeholder='Enter First Name')
       .form-group
           input.form-control(type='text', name="lastName", placeholder='Enter Last Name')
