delete & username applied now works
users signing in with social login now are prompted to provide a
username
users can delete accounts

--- a/views/chat.jade
+++ b/views/chat.jade
@@ -1,9 +1,9 @@
 extends layout
 block content
 	h1 Who would you like to talk to?
-	a(href='/chat')
+	a(href='/chatprof')
 		button.chatChoice#chatProfessional(type='button') Professional
-	a(href='/chat')
+	a(href='/chatpeer')
 		button.chatChoice#chatPeer(type='button') Peer
 	if(professional)
 		ul
