--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,18 +4,18 @@ html
     title= title
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css', rel='stylesheet', media='screen')
-    link(rel='stylesheet', href='/css/styles.css')
-    link(rel='stylesheet', href='/css/formstyle.css')
+    link(rel='stylesheet', href='/public/css/styles.css')
+    link(rel='stylesheet', href='/public/css/formstyle.css')
     script(type='text/javascript').
-      if(window.location.hash && window.location.hash = '#_=_') window.location.hash= '' 
-
+      if (window.location.hash && window.location.hash = '#_=_') window.location.hash= '' 
   body
     if (error && error.length > 0)
       br
       h4.error-msg= error
       br
-
     block content
-
-  script(src='http://code.jquery.com/jquery.js')
-  script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
+    script(src='http://code.jquery.com/jquery.js')
+    script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
+    script(src='/socket.io/socket.io.js')
+    script(src='/public/js/lib/adaptor.js')
+    script(src='/public/js/client.js')
