--- a/views/chat.jade
+++ b/views/chat.jade
@@ -1,6 +1,6 @@
 extends layout
 block content
-	h1 Who would you like to talk to?
+	h1 #{user.username} Who would you like to talk to?
 	a(href='/chatprof')
 		button.chatChoice#chatProfessional(type='button') Professional
 	a(href='/chatpeer')
