new room created if two users did not initially have a room

--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -1,18 +1,21 @@
 extends layout
 block content
 	.chatRoom
-		h1 Hi #{user.username} you are talking to ??
-		#chatWrap
-			p Incoming Messages
-			ul#incoming
+		if (room)
+			h1 #{room.user_init}
 			br
-			input#outgoing(type='text');
-		#videosWrap
-			#videoDisplay
-				video#localVideo
-				video#remoteVideo
-				.videoButtons
-					button.btn.btn-primary#startButton(type='button') Start
-					button.btn.btn-primary#callButton(type='button') Call
-					button.btn.btn-primary#hangupButton(type='button') Hang Up
-					button.btn.btn-primary#muteButton(type='button') Mute
+			h1 #{room.user_resp}
+			#chatWrap
+				p Incoming Messages
+				ul#incoming
+				br
+				input#outgoing(type='text');
+			#videosWrap
+				#videoDisplay
+					video#localVideo
+					video#remoteVideo
+					.videoButtons
+						button.btn.btn-primary#startButton(type='button') Start
+						button.btn.btn-primary#callButton(type='button') Call
+						button.btn.btn-primary#hangupButton(type='button') Hang Up
+						button.btn.btn-primary#muteButton(type='button') Mute
