user can login and start a chat with a peer

--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -9,7 +9,7 @@ block content
 				p Incoming Messages
 				ul#incoming
 				br
-				input#outgoing(type='text');
+				input#outgoing(type='text')
 			#videosWrap
 				#videoDisplay
 					video#localVideo
