--- a/public/scss/vars.scss
+++ b/public/scss/vars.scss
@@ -2,7 +2,10 @@ $red: #ea5455;
 $blue: #213e64;
 $mint: #6ed4b3;
 $white: #ffffff;
+$grey: #ebebeb;
 $black: #000000;
 
 $sans: 'Questrial', sans-serif;
+
+$pad: 20px;
 
