sign up page styled

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -63,6 +63,7 @@ form {
         width: 100%;
         height: 40px;
         font-family: $sans;
+        font-size: 1em;
         padding: $pad/4;
         margin: $pad/4 auto;
         color: $red;
