--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,6 +47,7 @@ form {
     width: 100%;
     height: 40px;
     font-family: "Questrial", sans-serif;
+    font-size: 1em;
     padding: 5px;
     margin: 5px auto;
     color: #ea5455;
